2006-03-11  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-remove-text-properties): Rename from
	gdb-remove-mouse-face and remove help-echo too.
	(gdb-enqueue-input): Correct conditional clause.
	
2006-03-10  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (calendar-holidays): Doc fix.
	* calendar/holidays.el (list-holidays): Doc fix.

2006-03-10  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdba): Don't call gdb-init-1 explicitly as
	it gets called in gdb-prompt anyway.
	(gdb-use-separate-io-buffer): Only restore window arrangement for
	gdb-many-windows.
	(gdb-enqueue-input): Make it harder to send GDB input when program
	is running.
	(gdb-buffer-list): New variable.
	(gdb-remove-mouse-face): New function.
	(gdb-starting): Use it when GDB input won't get sent.

2006-03-08  Juanma Barranquero  <lekktu@gmail.com>

	* help.el (view-lossage): Remove trailing whitespace before
	inserting "\n".

2006-03-07  Chong Yidong  <cyd@stupidchicken.com>

	* files.el (hack-local-variables-confirm): Set
	coding-system-for-read to nil before writing to .emacs.

	* arc-mode.el (archive-extract): Check if an existing buffer name
	comes from a different archive.

	* help.el (describe-key-briefly): If KEY is a down event, read and
	discard the up event.

2006-03-07  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-speedbar-buttons): Allow pointers to
	be edited and use font-lock-warning-face for any changes.

	* progmodes/gdb-ui.el (gdb-edit-value-handler): New function.
	(gdb-edit-value): Use it to report any errors.

2006-03-07  Juanma Barranquero  <lekktu@gmail.com>

	* help.el (describe-key): Remove leftover test code.

2006-03-07  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el: Move defvars out of eval-when-compile.  Use
	buffer-file-name variable.
	(org-agenda-file-to-end, org-agenda-file-to-front): Remove unused
	arg `file'.
	(org-level-faces): Remove startup dependency.
	(org-cycle, org-map-tree, org-scan-tags)